renamed class clustermethods to ClusterMethods and fixed a couple of static variable access warnings to data.dimensions -> clusterdata.dimensions